compiler/testData/diagnostics/tests/redeclarations/RedeclarationInDefaultObject.fir.kt
class A {
    companion object B {
        <!REDECLARATION!>class G<!>
        <!REDECLARATION!>val G = 1<!>
    }
}